# AI-Knowledge-Assistant

./: .dockerignore  .gitattributes  .gitignore  MISSION.md  NOTES.md  README.md  停止项目.cmd  启动项目.cmd
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  chat.py  contracts.py  embeddings.py  rerankers.py  rewrite.py
backend/app/api/: auth_dependencies.py  dependencies.py  error_handlers.py  middleware.py  sse.py
backend/app/audit/: __init__.py  service.py
backend/app/auth/: __init__.py  schemas.py  service.py
backend/app/authorization/: __init__.py  service.py  support_service.py
backend/app/conversations/: __init__.py  schemas.py  service.py
backend/app/core/: __init__.py  config.py  event_loop.py  exceptions.py  logging.py  metrics.py  rate_limit.py  request_context.py  security.py
backend/app/db/: base.py  health.py  session.py
backend/app/evaluation/: __init__.py  comparison.py  dataset.py  metrics.py  policy.py  reporting.py  reranker_calibration.py  runner.py  schemas.py  snapshot.py
backend/app/jobs/: __init__.py  contracts.py  repository.py  service.py
backend/app/knowledge/: __init__.py  background.py  chunking.py  (+5 more)
backend/migrations/: env.py
backend/scripts/: __init__.py  accept_stage3.py  calibrate_reranker.py  create_admin.py  demo_knowledge_manifest.py  evaluate_rag.py  generate_demo_knowledge_files.py  record_quality_evaluation.py  reset_development_data.py  smoke_test.py  verify_stage4_compose.py
backend/tests/: database_cleanup.py
(+370 files in other folders)
